--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,41 @@
-language: c
+# Continuous Integration (CI) is the practice, in software
+# engineering, of merging all developer working copies with a shared mainline
+# several times a day < http://docs.platformio.org/page/ci/index.html >
+#
+# Documentation:
+#
+# * Travis CI Embedded Builds with PlatformIO
+#   < https://docs.travis-ci.com/user/integration/platformio/ >
+#
+# * PlatformIO integration with Travis CI
+#   < http://docs.platformio.org/page/ci/travis.html >
+#
+# * User Guide for `platformio ci` command
+#   < http://docs.platformio.org/page/userguide/cmd_ci.html >
+#
+#
+# Please choice one of the following templates (proposed below) and uncomment
+# it (remove "# " before each line) or use own configuration according to the
+# Travis CI documentation (see above).
+#
+
+
+#
+# Template #1: General project. Test it using existing `platformio.ini`.
+#
+
+language: python
+python:
+  - "2.7"
+
 sudo: false
-before_install:
-  - source <(curl -SLs https://raw.githubusercontent.com/adafruit/travis-ci-arduino/master/install.sh)
+cache:
+  directories:
+    - "~/.platformio"
+
 install:
-  - arduino --install-library "ArduinoJson, WiFiManager"
+  - pip install -U platformio
+
 script:
-  - build_main_platforms
-notifications:
-  email:
-    on_success: change
-    on_failure: change
+  - cd EnviroMonitorStation
+  - platformio run
