Add fake data sending

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,16 +8,6 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-;[env:nodemcuv2]
-;platform=espressif8266
-;board=nodemcuv2
-;framework=arduino
-;lib_deps =
-;  WifiManager
-;  https://github.com/EnviroMonitor/ESP8266wifi.git#pgmspace_include
-;  ArduinoJson
-;  EspSoftwareSerial
-
 [env:d1_mini]
 platform=espressif8266
 board=d1_mini
@@ -27,6 +17,7 @@ lib_deps =
   https://github.com/EnviroMonitor/ESP8266wifi.git#pgmspace_include
   ArduinoJson
   EspSoftwareSerial
+  HTTPClient
 
 [platformio]
 src_dir=EnviroMonitorStation
