--- a/platformio.ini
+++ b/platformio.ini
@@ -8,16 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:nodemcuv2]
-platform=espressif8266
-board=nodemcuv2
-framework=arduino
-lib_deps =
-  WifiManager
-  https://github.com/EnviroMonitor/ESP8266wifi.git#pgmspace_include
-  ArduinoJson
-  EspSoftwareSerial
-  HTTPClient
+; [env:nodemcuv2]
+; platform=espressif8266
+; board=nodemcuv2
+; framework=arduino
+; lib_deps =
+;   WifiManager
+;   https://github.com/EnviroMonitor/ESP8266wifi.git#pgmspace_include
+;   ArduinoJson
+;   EspSoftwareSerial
+;   HTTPClient
 
 [env:d1_mini]
 platform=espressif8266
@@ -29,6 +29,7 @@ lib_deps =
   ArduinoJson
   EspSoftwareSerial
   HTTPClient
+  DHT sensor library
 
 [platformio]
 src_dir=EnviroMonitorStation
